syntax = "proto3";

package transaction;

option go_package = "grpc/transaction"; 

service TransactionService {
    rpc AddTransaction(TransactionJsonRequest) returns (TransactionResponse);
    rpc GetChain (EmptyRequest) returns (ChainResponse);
}

message TransactionJsonRequest {
    string json_data = 1;
}

message TransactionResponse {
    bool success = 1;
    string message = 2;
}

message EmptyRequest {}

message ChainResponse {
    string chain_json = 1;
}
